<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/layFixed"
        android:layout_toRightOf="@+id/layFixed">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lay_row"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/table_cell_height"
                android:background="@color/colorBackground"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/Lay2"
                    android:layout_width="@dimen/width_col2"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/style_header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Price ($)"/>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sort"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/Lay3"
                    android:layout_width="@dimen/width_col3"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView3"
                        style="@style/style_header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="24h Volume"/>

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sort"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Lay4"
                    android:layout_width="@dimen/width_col4"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView4"
                        style="@style/style_header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/market_cap"/>

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sort"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Lay5"
                    android:layout_width="@dimen/width_col5"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView5"
                        style="@style/style_header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="BTC Last"/>
                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sort"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Lay6"
                    android:layout_width="@dimen/width_col6"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView6"
                        style="@style/style_header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/price_diff_15mins"/>
                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sort"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Lay7"
                    android:layout_width="@dimen/width_col7"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView7"
                        style="@style/style_header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/price_diff_30mins"/>
                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sort"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Lay8"
                    android:layout_width="@dimen/width_col8"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView8"
                        style="@style/style_header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/price_diff_1hr"/>
                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sort"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Lay9"
                    android:layout_width="@dimen/width_col9"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView9"
                        style="@style/style_header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/price_diff_3hr"/>
                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sort"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Lay10"
                    android:layout_width="@dimen/width_col10"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView10"
                        style="@style/style_header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/change_24hr"/>
                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sort"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Lay11"
                    android:layout_width="@dimen/width_col11"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView11"
                        style="@style/style_header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/change_7_days"/>
                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sort"/>

                </LinearLayout>


            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lay_row"/>
        </RelativeLayout>
    </HorizontalScrollView>

    <RelativeLayout
        android:id="@+id/layFixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layHeader1"
            android:layout_width="@dimen/width_col1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageViewFilter"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_filter_list"/>

            <TextView
                android:id="@+id/textView1"
                style="@style/style_header"
                android:layout_width="110dp"
                android:layout_height="@dimen/table_cell_height"
                android:background="@color/colorBackground"
                android:text="Crypto Coin" />
        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/fixedRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layHeader1"/>
    </RelativeLayout>
</RelativeLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:lottie_fileName="anim/data.json"
        app:lottie_imageAssetsFolder="anim/images"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />
</RelativeLayout>
